objects/PMC_CPQ_InvoiceItem__c.object
<CustomObject>
    <fields>
        <fullName>PMC_CPQ_BilledQuantity__c</fullName>
        <label>Billed Quantity</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Billed_Quantity__c</fullName>
        <description>Marked for deletion</description>
        <label>Billed Quantity1</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DeliveryItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Item</label>
        <referenceTo>ShipmentItem</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>InvoiceItems1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_InvoiceLineStatus__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Invoice Line Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Invoice__c</fullName>
        <description>The Invoice associated with this Item.</description>
        <label>Invoice</label>
        <referenceTo>PMC_CPQ_Invoice__c</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>InvoiceItems2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LinePONumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Purchase Order #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_MOT__c</fullName>
        <label>MOT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_MoT</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_NetInvoiceItemValue__c</fullName>
        <label>Net Invoice Item Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_NetInvoicedQuantity__c</fullName>
        <label>Net Invoiced Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>InvoiceItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Location</label>
        <referenceTo>PMC_CPQ_ProductLocation__c</referenceTo>
        <relationshipLabel>Invoice Items (Product Location)</relationshipLabel>
        <relationshipName>Invoice_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SAPDeliveryID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP Delivery ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SAPDeliveryLineID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP Delivery Line ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SAPInvoiceItemNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SAP Invoice Item Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SAPInvoiceLine__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP Invoice Line</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SAPInvoice__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP Invoice</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SAPOrderID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP Order ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SAPOrderLineID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP Order Line ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ShipDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ShipTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>Invoice_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_UnitOfMeasure__c</fullName>
        <description>Holds the Unit of Measure value of the invoice item</description>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_SS_UnitOfMeasure</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_InvoiceQuantitySAUoM__c</fullName>
        <description>To store Invoice Quantity according to related Sales Agreement&apos;s UoM</description>
        <formula>IF( ISPICKVAL(PMC_CPQ_UnitOfMeasure__c, &apos;MTN&apos;) &amp;&amp; ISPICKVAL(PMC_CPQ_Invoice__r.PMC_CPQ_Order__r.SalesAgreement.PMC_SS_UnitofMeasure__c,&apos;MTN&apos;), PMC_CPQ_NetInvoicedQuantity__c,
IF( ISPICKVAL(PMC_CPQ_UnitOfMeasure__c, &apos;STN&apos;) &amp;&amp; ISPICKVAL(PMC_CPQ_Invoice__r.PMC_CPQ_Order__r.SalesAgreement.PMC_SS_UnitofMeasure__c,&apos;STN&apos;), PMC_CPQ_NetInvoicedQuantity__c,
IF( ISPICKVAL(PMC_CPQ_UnitOfMeasure__c, &apos;MTN&apos;) &amp;&amp; ISPICKVAL(PMC_CPQ_Invoice__r.PMC_CPQ_Order__r.SalesAgreement.PMC_SS_UnitofMeasure__c,&apos;STN&apos;), PMC_CPQ_NetInvoicedQuantity__c*$CustomMetadata.PMC_SS_UOMConversionMapping__mdt.MTNtoSTN.PMC_SS_ConversionFactor__c,
IF( ISPICKVAL(PMC_CPQ_UnitOfMeasure__c, &apos;STN&apos;) &amp;&amp; ISPICKVAL(PMC_CPQ_Invoice__r.PMC_CPQ_Order__r.SalesAgreement.PMC_SS_UnitofMeasure__c,&apos;MTN&apos;), PMC_CPQ_NetInvoicedQuantity__c*$CustomMetadata.PMC_SS_UOMConversionMapping__mdt.STNtoMTN.PMC_SS_ConversionFactor__c,  null))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Quantity (SA UoM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Invoice Item</label>
    <nameField>
        <displayFormat>INV ITEM-{0000}</displayFormat>
        <label>Invoice Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>